feat: add showing todo list when page load

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
               <div class="row">
                 <div class="col-md-10">
                   <!-- Add Todo -->
-                  <form class="add-todo">
+                  <div class="add-todo">
                       <div class="form-group">
                           <div class="input-group">
                               <span class="input-group-btn">
-                                  <button type="button" class="btn btn-primary input-lg">Add</button>
+                                  <button type="button" class="todo-add btn btn-primary input-lg">Add</button>
                               </span>
-                              <input type="text" class="form-control input-lg" placeholder="What do you need to get done?" />
+                              <input type="text" class="todo-input form-control input-lg" placeholder="What do you need to get done?" />
                           </div>
                       </div>
-                  </form>
+                  </div>
                   <!-- /Add Todo -->
                 </div>
 
