feat: implement add todo and remove completed todos

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
               <br>
 
               <div class="row">
+                <div class="todo-info col-md-12">
+                    <!-- Todo Items rendered here -->
+                </div>
+              </div>
+
+              <br>
+
+              <div class="row">
                 <div class="col-md-10">
                   <!-- Add Todo -->
                   <div class="add-todo">
