--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="./src/app.js"></script>
+    <script type="text/javascript" src="./dist/app.js"></script>
 </body>
 </html>
